refactor: improve validating and mutating webhooks